--- a/Trip_Buddy_v0/app/src/main/res/layout/activity_new_trip.xml
+++ b/Trip_Buddy_v0/app/src/main/res/layout/activity_new_trip.xml
@@ -69,7 +69,7 @@
             android:layout_weight="2"
             android:textSize="18sp"
             android:textStyle="bold"
-            android:textColor="@color/WordDark"
+            android:textColor="@color/cardview_light_background"
             />
 
 
