--- a/Trip_Buddy_v0/app/src/main/res/layout/content_main.xml
+++ b/Trip_Buddy_v0/app/src/main/res/layout/content_main.xml
@@ -10,23 +10,13 @@
     android:background="@color/LoginBackground"
     >
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        android:id="@+id/hello"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintHorizontal_bias="0.051"
-        app:layout_constraintVertical_bias="0.031" />
-
     <ListView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="52dp">
+        android:id="@+id/listView"
+        android:layout_width="368dp"
+        android:layout_height="511dp"
+        android:dividerHeight="10dp"
+        tools:layout_editor_absoluteY="8dp"
+        tools:layout_editor_absoluteX="8dp">
 
     </ListView>
 
