--- a/Trip_Buddy_v0/app/src/main/res/layout/gridview_text_img.xml
+++ b/Trip_Buddy_v0/app/src/main/res/layout/gridview_text_img.xml
@@ -4,16 +4,21 @@
     android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
+
     <ImageView
+        android:id="@+id/imageView"
         android:layout_width="match_parent"
         android:layout_height="@dimen/photo_height"
-        android:id="@+id/imageView"
-        android:scaleType="centerCrop"
+        android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
+        android:background="@color/WordLight"
+        android:clickable="true"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
+        android:scaleType="centerCrop"
         android:tint="@color/photo_tint_white"
-        android:focusable="false"
-        android:focusableInTouchMode="false"
-        android:layout_centerHorizontal="true" />
+        app:srcCompat="@drawable/trips_default" />
+
 
     <TextView
         android:layout_width="wrap_content"
