--- a/Trip_Buddy_v0/app/src/main/res/layout/gridview_text_img.xml
+++ b/Trip_Buddy_v0/app/src/main/res/layout/gridview_text_img.xml
@@ -12,9 +12,8 @@
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:background="@color/WordLight"
-        android:clickable="true"
-        android:focusable="true"
-        android:focusableInTouchMode="true"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
         android:scaleType="centerCrop"
         android:tint="@color/photo_tint_white"
         app:srcCompat="@drawable/trips_default" />
