--- a/Trip_Buddy_v0/app/src/main/res/layout/gridview_text_img.xml
+++ b/Trip_Buddy_v0/app/src/main/res/layout/gridview_text_img.xml
@@ -47,6 +47,7 @@
         android:id="@+id/matchNumber"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:textColor="@color/cardview_light_background"
         android:textSize="30sp"
         android:textStyle="bold"
