--- a/Trip_Buddy_v0/app/src/main/res/layout/content_main.xml
+++ b/Trip_Buddy_v0/app/src/main/res/layout/content_main.xml
@@ -24,8 +24,8 @@
 
     <GridView xmlns:android="http://schemas.android.com/apk/res/android"
               android:id="@+id/gridview"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
+              android:layout_width="368dp"
+              android:layout_height="511dp"
               android:numColumns="1"
               android:verticalSpacing="10dp"
               android:horizontalSpacing="10dp"
@@ -33,6 +33,8 @@
               android:gravity="center"
               android:focusable="true"
               android:layout_alignParentTop="true"
-              android:layout_alignParentStart="true"/>
+              android:layout_alignParentStart="true"
+        tools:layout_editor_absoluteY="8dp"
+        tools:layout_editor_absoluteX="8dp" />
 
 </android.support.constraint.ConstraintLayout>
