--- a/Trip_Buddy_v0/app/src/main/res/layout/activity_chat2.xml
+++ b/Trip_Buddy_v0/app/src/main/res/layout/activity_chat2.xml
@@ -15,10 +15,19 @@
             android:id="@+id/toolbar_main2"
             android:layout_width="match_parent"
             android:theme="@style/Toolbar"
-            android:layout_height="?attr/actionBarSize"
+            android:layout_height="50dp"
             app:popupTheme="@style/Theme.AppCompat.Light">
 
         </android.support.v7.widget.Toolbar>
+
+        <Button
+            android:id="@+id/btnBack"
+            android:layout_width="36dp"
+            android:layout_height="36dp"
+            android:layout_marginTop="-42dp"
+            android:layout_marginStart="8dp"
+            android:layout_weight="1"
+            android:background="@drawable/ic_back_arrow" />
 
     </android.support.design.widget.AppBarLayout>
 
