--- a/Trip_Buddy_v0/app/src/main/res/menu/menu_group_chat2.xml
+++ b/Trip_Buddy_v0/app/src/main/res/menu/menu_group_chat2.xml
@@ -2,9 +2,14 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <item android:id="@+id/action_group_channel_view_members"
+    <item android:id="@+id/action_group_channel_view_members2"
         android:title="View members"
         android:orderInCategory="10"
         app:showAsAction="never" />
+
+    <item android:id="@+id/action_group_channel_invite2"
+        android:title="Invite members"
+        android:orderInCategory="20"
+        app:showAsAction="never"/>
 
 </menu>
