--- a/Trip_Buddy_v0/app/src/main/res/layout/gridview_text_img.xml
+++ b/Trip_Buddy_v0/app/src/main/res/layout/gridview_text_img.xml
@@ -48,5 +48,14 @@
         android:text="0"
         android:background="@drawable/ic_bookmark"
         />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/btnDelete"
+        android:text="Delete"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
+        android:layout_alignBottom="@+id/imageView"
+        android:layout_alignParentEnd="true"/>
 
 </RelativeLayout>
