--- a/Trip_Buddy_v0/app/src/main/res/layout/gridview_text_img.xml
+++ b/Trip_Buddy_v0/app/src/main/res/layout/gridview_text_img.xml
@@ -48,14 +48,16 @@
         android:text="0"
         android:background="@drawable/ic_bookmark"
         />
+
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:id="@+id/btnDelete"
-        android:text="Delete"
-        android:focusable="false"
-        android:focusableInTouchMode="false"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:layout_alignBottom="@+id/imageView"
-        android:layout_alignParentEnd="true"/>
+        android:layout_alignParentStart="true"
+        android:background="@drawable/ic_delete"
+        android:focusable="false"
+        android:layout_margin="10dp"
+        android:focusableInTouchMode="false" />
 
 </RelativeLayout>
